<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailActivity"
        android:padding="20dp">

        <ImageView
            android:id="@+id/img_tdoll_item"
            android:layout_width="200dp"
            android:layout_height="350dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="pa"
            android:src="@drawable/springfield"
            android:contentDescription="@string/chara_desc_test"
            />

        <!-- TODO: wawa skill ama kek ar15 -->
        <!-- TODO: m4a1 skill ama kek spas12 -->
        <!-- TODO: wawa tiles ama kek hk416 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/img_tdoll_item"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tdoll_name"
                android:textSize="20sp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wa2000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weapon_style_txt"
                android:textSize="20sp"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/senjata"
                android:textSize="20sp"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/factions"
                android:textSize="20sp"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/griffin_amp_kryuger"
                android:textSize="20sp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manufacturer"
                android:textSize="20sp"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_16lab"
                android:textSize="20sp"
                android:layout_marginTop="10dp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/tiles_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/img_tdoll_item"
            android:padding="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tiles_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_tdoll_item"
                android:layout_marginTop="15dp"
                android:background="@android:color/darker_gray"
                android:gravity="center">

                <TextView
                    android:id="@+id/tiles_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tiles_txt"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    app:layout_constraintTop_toTopOf="parent"

app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>


                <ImageView
                    android:id="@+id/tiles_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/springfield_tiles"
                    android:contentDescription="@string/character_description"
                    android:layout_marginTop="7dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tiles_txt"/>

                <LinearLayout
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/tiles_img"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:orientation="vertical"
                    android:padding="5dp">


                    <TextView
                        android:id="@+id/tv_tdoll_effect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wp_affect"
                        android:textSize="20sp"
                        android:layout_marginTop="5dp"
                        app:layout_constraintStart_toStartOf="@id/tiles_img"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/tdoll_tiles_effect"
                        android:textSize="20sp"
                        app:layout_constraintTop_toBottomOf="@id/tv_tdoll_effect"
                        app:layout_constraintStart_toStartOf="parent"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/skill_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tiles_card"
            android:padding="10dp">

            <!--    jangan lupa apus id yg gaperlu ada di card pertama ama yg ini   -->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/skill_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_tdoll_item"
                android:layout_marginTop="15dp"
                android:background="@android:color/darker_gray"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/skill_txt"
                    android:text="@string/skill"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>


                <ImageView
                    android:id="@+id/skill_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/springfield_skill"
                    android:contentDescription="@string/character_description"
                    android:layout_marginTop="7dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <LinearLayout
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/skill_txt"
                    app:layout_constraintStart_toEndOf="@id/skill_img"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tv_skills_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/skills_name"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/tv_skills_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/skill_duration"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_gravity="center" android:layout_marginTop="10dp"
android:textColor="@android:color/holo_orange_light" />

                    <TextView
                        android:id="@+id/tv_tdoll_skill"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/apalah"
                        android:textSize="20sp"
                        android:layout_marginTop="5dp" />


                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/design_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/skill_card"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/character_design"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/design_title"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/chara_design"
            android:layout_marginTop="7dp"
            android:textSize="20sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>