<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="70dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/desc"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:strokeColor="@color/black"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/img_item_photo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="start"
                android:padding="20dp"
                >

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    tools:text="@string/wa2000"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weapon_style_txt"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_item_weapon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/senjata"
                        android:textSize="16sp"
                        android:layout_marginStart="7dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/factions"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_item_faction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/griffin_amp_kryuger"
                        android:textSize="16sp"
                        android:layout_marginStart="7dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/manufacturer"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_item_manufactur"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/_16lab"
                        android:textSize="16sp"
                        android:layout_marginStart="7dp"/>

                </LinearLayout>

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/character_description"-->
<!--                    android:textSize="16sp" />-->

<!--                <TextView-->
<!--                    android:id="@+id/tv_item_description"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    tools:text="@string/chara_desc_test"-->
<!--                    android:textSize="16sp"-->
<!--                    android:layout_marginTop="3dp"/>-->

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>